<resources>
    <string name="app_name">Reciply</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_hint">Search any recipe</string>
    <string name="fav_search_hint">Search in favorite recipes</string>
    <string name="no_results">Nothing to preview</string>

    <string name="dialog_message">Are you sure you want to delete this recipe?</string>
    <string name="description">Reciply presents a new experience for cooking.\n It made it easy, enjoyable and more cheap.\n

Reciply has variety of food recipes that can be easily done, each recipe has all the info you will need to make it! such as ingredients, origin, cooking time and SURPRISE: a video that will be with you step by step until you get this delicious plate. 😋\n

Also user can have an account to save his favorite recipes and log in is required for authentication.</string>
    <string name="popular_now">Popular Now</string>
    <string name="all_recipes">All Recipes</string>
    <string name="reciply">Reciply</string>
    <string name="meal_title">Meal Title</string>
    <string name="category">Category</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_category">Meal Category</string>
</resources>

<!--😋-->